[IRGen] Generate proper type descriptors for ObjC subscript accessors

https://bugs.swift.org/browse/SR-8356
rdar://problem/42284266